// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`launchSource debug 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource debug 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource fail 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource fail 3`] = `
Array [
  Array [
    "tool",
    Object {
      "debug": false,
      "forceREST": false,
      "live": false,
    },
    "source",
    Array [
      "asset1",
      "asset2",
      "asset3",
    ],
  ],
]
`;

exports[`launchSource forceREST 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 rest>> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource forceREST 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource live 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource live 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": undefined,
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success 1`] = `
Array [
  Array [
    "npm run tool source=source assets=asset1,asset2,asset3 >> tool.source.asset1.asset2.asset3.log",
    Object {},
  ],
]
`;

exports[`launchSource success 2`] = `
Object {
  "source": Object {
    "failCount": 0,
    "instance": Object {
      "on": [MockFunction] {
        "calls": Array [
          Array [
            "exit",
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
    "lastFailTimestamp": 1234567890,
    "source": "source",
  },
}
`;

exports[`launchSource success 3`] = `
Array [
  Array [
    "exit",
    [Function],
  ],
]
`;

exports[`retry after long enought time 1`] = `
Object {
  "failCount": 1,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "source": "source",
}
`;

exports[`retry within short time 1`] = `
Object {
  "failCount": 3,
  "instance": undefined,
  "lastFailTimestamp": 1234567890,
  "source": "source",
}
`;

exports[`startFetching no source 1`] = `
Array [
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "quote",
      "base",
    ],
    Object {
      "assets": Array [
        "quote",
        "base",
      ],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gemini",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "kraken",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
  Array [
    "tool",
    "gdax",
    Array [
      "someQuote",
      "someBase",
    ],
    Object {
      "assets": Array [],
      "debug": false,
      "exSources": Array [],
      "forceREST": false,
      "pair": "someQuote|someBase",
      "source": "",
      "sources": Array [
        "gemini",
        "kraken",
      ],
    },
  ],
]
`;

exports[`startFetching source 1`] = `
Array [
  Array [
    Array [
      "quote|base",
    ],
  ],
]
`;
